@@ -1,3 +1,8 @@
+2017-02-09 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c:
+	  Optimize wide right shifts, part of RFE #524.
+
 2017-02-08 Philipp Klaus Krause <pkk AT spth.de>
 
 	* device/lib/rand.c:
